Cadastro de empresa e ajuste na interface.

--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "bootstrap": "^4.0.0-beta.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jquery-mask-plugin": "^1.14.13",
     "popper.js": "^1.12.9",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "sweetalert2": "^7.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
