--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "consign": "^0.1.6",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "http-status": "^1.0.1",
     "jsonwebtoken": "^8.1.0",
