--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-radio-group": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "sweetalert2": "^7.11.0"
