--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-radio-group": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-to-print": "^1.0.20",
     "sweetalert2": "^7.11.0"
   },
   "scripts": {
