--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "@fortawesome/fontawesome": "^1.1.3",
     "@fortawesome/react-fontawesome": "0.0.17",
     "bootstrap": "^4.0.0-beta.3",
+    "chart.js": "^2.7.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jquery-mask-plugin": "^1.14.13",
     "popper.js": "^1.12.9",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
     "react-input-mask": "^1.2.2",
     "react-radio-group": "^3.0.2",
